platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_52.platter
piece[] of nums = (1, 2, 3);

start(){
    serve nums[0];
}